fix: 링크 글자들이 화면 너비에 따라 wrap 되지 않는 문제 수정

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,23 @@
   * {
     box-sizing: border-box;
     word-break: keep-all;
+    word-wrap: break-word;
   }
+  .prose code:not(pre code) {
+    /* inline code block */
+    @apply bg-neutral-200 py-0.5 px-1.5 m-1 rounded-md;
+  }
+  .prose code::after {
+    display: none;
+  }
+  .prose code::before {
+    display: none;
+  }
+
+  .prose pre {
+    @apply text-sm sm:text-base p-3 md:p-4 !important;
+  }
+
   nav {
     @apply bg-gradient-to-t from-neutral-50/0 via-neutral-50/90 to-neutral-50/100;
   }
